k8s/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: myvault

spec:
  replicas: 2
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: myvault
  template:
    metadata:
      labels:
        app: myvault
      annotations:
        prometheus.io/scrape: "false"

    spec:
      containers:
      - name: myvault
        image: ivostoy/myvault:0.0.0.0
        # see readme for policy in minikube
        imagePullPolicy: Never
        #imagePullPolicy: Always
        #imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 52052
          name: grpc-api
          protocol: TCP
        - containerPort: 8080
          name: rest
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
